--- a/index.html
+++ b/index.html
@@ -105,7 +105,26 @@
          <button class="b1">Wiew all</button>
     </div>
 <footer class="footer">
-    <img src="Group 23.png" alt="" class="logo">
+   <div class="f1">
+        <img src="Group 27.svg" alt="" class="logo1">
+        <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online 
+        for everyone</p>
+   </div>
+   <div class="f2">
+        <h4>Company</h4>
+        <p class="f2p">About</p>
+        <p class="fp">Apps</p>
+   </div>
+   <div class="f3">
+        <h4>Region</h4>
+        <p class="f2p">Indonesia</p>
+        <p class="fp">Singapore</p>
+   </div>
+   <div class="f4">
+        <h4>Help</h4>
+        <p class="f2p">Help center</p>
+        <p class="fp">Contact support</p>
+   </div>
 </footer>
 </body>
 </html>
